--- a/.github/workflows/unitTest.yaml
+++ b/.github/workflows/unitTest.yaml
@@ -11,6 +11,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.11.3
+        
+      - name: Install openai
+        run: |
+           python -m pip install --upgrade pip
+           pip install openai
 
       - name: Install tools
         run: python -m pip install --upgrade pip pytest
