--- a/.github/workflows/unitTest.yaml
+++ b/.github/workflows/unitTest.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Install tools
         run: |
         python -m pip install --upgrade pip pytest
-        pip install openai
+        pip install openai=0.28
 
       - name: Test with unittest
         run: python3 -m unittest test.py
