--- a/.github/workflows/unitTest.yaml
+++ b/.github/workflows/unitTest.yaml
@@ -14,7 +14,8 @@ jobs:
 
       - name: Install tools
         run: |
-        python -m pip install --upgrade pip pytest
+        python -m pip install --upgrade pip 
+        pip install pytest
         pip install openai=0.28
 
       - name: Test with unittest
